--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+capi-media-audio-io (0.1.0-5) unstable; urgency=low
+
+  * Apply the SOVERSION 
+
+ -- Kangho Hur <kangho.hur@samsung.com>  Tue, 14 Feb 2012 18:19:52 +0900
+
 capi-media-audio-io (0.1.0-4) unstable; urgency=low
 
   * Initial release.
