audio-io implements focus feature(merged from tizen_2.4_experimental branch)
[Version] 0.3.5
[Profile] Common
[Issue Type] Add features
[Dependency module] libmm-sound
[Dependency commit] NA
[Comment]

Signed-off-by: KimJeongYeon <jeongyeon.kim@samsung.com>
Change-Id: Id915e895463de3f1e320559c9d17b59a5b66243f

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
 Kangho Hur <kanho.hur@samsung.com>
 Seungkeun Lee <sngn.lee@samsung.com>
 Seungbae Shin <seungbae.shin at samsung.com>
+SeonYoung Jeong <sy7787.jeong@samsung.com>
+JeongYeon Kim <jeongyeon.kim@samsung.com>
